--- a/movie.html
+++ b/movie.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-default">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="index.html"><i class="fas fa-video"></i> Movie Infoo Search</a>
+                <a class="navbar-brand" href="index.html"><i class="fas fa-video"></i> Movie Info Search</a>
             </div>
         </div>
     </nav>
